Mon Mar 06 20:08:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.h:
          Doxygen improvement

Mon Mar 06 19:19:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Incoming_Message_Queue.cpp:
          Doxygen improvements

Mon Mar 06 16:00:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_CDR_Message_Sender.cpp:
          Use prefix increment instead of postfix

Mon Mar 06 15:57:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Invocation_Adapter.cpp:
          Removed a not needed local variable.

        * tao/IIOP_Transport.cpp:
          Initialise pointer with 0

Mon Mar 06 15:56:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/Factory/OBV_Factory.mpc:
        * tests/OBV/Forward/OBV_Forward.mpc:
        * tests/OBV/TC_Alignment/OBV_TC_Alignment.mpc:
        * tests/OBV/ValueBox/valuebox.mpc:
          Use more specific base projects

        * tests/OBV/Supports/Supports_Test.mpc:
          Removed exename, not needed

Mon Mar 06 15:32:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Any/Recursive/client.cpp:
        * tests/Any/Recursive/Test.idl:
          Extended this test by making the IDL even a little bit more complex

        * TAO_IDL/fe/fe_interface_header.cpp:
          Explicitly initialize pd_n_supports to 0, fixes a crash of TAO_IDL
          when build with Borland C++ when feeding it a certain incorrect
          IDL file. This fixes bugzilla bug 2428

        * tao/AnyTypeCode/Any.cpp:
        * tao/AnyTypeCode/Any_Array_Impl_T.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl_T.cpp:
        * tao/AnyTypeCode/Any_Dual_Impl_T.cpp:
        * tao/AnyTypeCode/Any_Impl_T.cpp:
        * tao/AnyTypeCode/Any_Special_Impl_T.cpp:
        * tao/AnyTypeCode/Any_SystemException.cpp:
        * tao/AnyTypeCode/Any_Unknown_IDL_Type.cpp: