@@ -1,3 +1,11 @@
+Tue Mar  7 07:40:37 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * examples/AMI/FL_Callback/Makefile.am:
+        * tao/Makefile.am:
+
+          Regenerated for autoconf FL & QT Reactor / FL & QT Resource
+          Factory support.
+
 Mon Mar 06 20:08:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/Transport.h:
